IE9 fix for spacing between header and main content area

--- a/wp-content/themes/imo-mags-gunsandammo/sass/style.scss
+++ b/wp-content/themes/imo-mags-gunsandammo/sass/style.scss
@@ -1216,6 +1216,7 @@ a.comment-count {
 
 .home {
   #main {
+    margin-top: 35px;
     padding-top: 0;
   }
   // Carrington Module Layout Classes
